<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="350dp"
    android:layout_height="530dp"
    android:background="@color/bgcolor"
    android:padding="5dp"
    android:layout_gravity="center">

    <TextView
        android:id="@+id/textView12"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:fontFamily="@font/gothicb"
        android:gravity="center_horizontal"
        android:padding="10dp"
        android:text="@string/creditstxt"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:visibility="visible" />

    <ScrollView
        android:id="@id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="380dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:layout_alignParentLeft="true"
        android:layout_below="@id/textView12"
        android:layout_alignParentStart="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/creditscontent"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="3dp"
                android:fontFamily="@font/arialnb"
                android:lineSpacingExtra="5sp"
                android:padding="10dp"
                android:text="@string/cc"
                android:textAllCaps="false"
                android:textAlignment="center"
                android:textColor="#FFFFFF"
                android:textSize="20sp"
                android:visibility="visible"
                android:gravity="center_horizontal" />

        </LinearLayout>
    </ScrollView>

    <Button
        android:id="@+id/closebtn"
        android:layout_width="150dp"
        android:layout_height="60dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:fontFamily="@font/gothicb"
        android:text="@string/close2"
        android:textAllCaps="false"
        android:textColor="#FFFFFF"
        android:textSize="25sp"
        android:tint="#C4813A"
        android:visibility="visible"
        android:layout_below="@id/scrollView"
        android:layout_centerHorizontal="true"
        app:backgroundTint="#C4813A" />

</RelativeLayout>